# study_mlir_gccjit

./: README.md  init.sh
mlir-gccjit/: .clang-tidy  .gitignore  CMakeLists.txt  COPYING  README.md  run-lit.py  test.sh
mlir-gccjit/.github/workflows/: build.yml  deploy-docs.yml
mlir-gccjit/cmake/: FindGCCJIT.cmake  FindLLVM.cmake  FindMLIR.cmake  mlir2.cmake
mlir-gccjit/include/: CMakeLists.txt
mlir-gccjit/include/mlir-gccjit/: CMakeLists.txt  Passes.h  Passes.td
mlir-gccjit/include/mlir-gccjit/Conversion/: Conversions.h  TypeConverter.h
mlir-gccjit/include/mlir-gccjit/IR/: CMakeLists.txt  GCCJITAttrs.h  GCCJITAttrs.td  GCCJITDialect.h  GCCJITDialect.td  GCCJITOps.h  GCCJITOps.td  GCCJITOpsEnums.h  GCCJITTypes.h  GCCJITTypes.td
mlir-gccjit/include/mlir-gccjit/IR/Interfaces/: CMakeLists.txt  GCCJITRecordTypeInterface.h  GCCJITRecordTypeInterface.td
mlir-gccjit/include/mlir-gccjit/Translation/: TranslateToGCCJIT.h
mlir-gccjit/src/: CMakeLists.txt  GCCJITAttrs.cpp  GCCJITDialect.cpp  GCCJITOps.cpp  GCCJITTypes.cpp
mlir-gccjit/src/Conversion/: CMakeLists.txt  ConvertArithToGCCJIT.cpp  ConvertFuncToGCCJIT.cpp  ConvertMemrefToGCCJIT.cpp  TypeConverter.cpp
mlir-gccjit/src/Interfaces/: CMakeLists.txt  GCCJITRecordTypeInterface.cpp
mlir-gccjit/src/Translation/: CMakeLists.txt  Registration.cpp  TranslateToGCCJIT.cpp  TypeTranslation.cpp
mlir-gccjit/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir-gccjit/test/compile/: atomic.mlir  bitfield.mlir  deref_chain.mlir  expression.mlir  global.mlir  hello_world.mlir  lazy_evaluation.mlir  unary.mlir  union.mlir  vector.mlir  vector_mlir.md
mlir-gccjit/test/lowering/: alloc.mlir  alloca.mlir  alloca_sum.c  alloca_sum.mlir  assume_aligned.mlir  dealloc.mlir  gemm.c  gemm.mlir  global.mlir
mlir-gccjit/test/syntax/: basic.mlir  branch.mlir  extened_asm.mlir  floating_point.mlir  function_attrs.mlir  hello_world.mlir  record.mlir  variables.mlir
mlir-gccjit/tools/: CMakeLists.txt
mlir-gccjit/tools/gccjit-opt/: CMakeLists.txt  main.cpp
mlir-gccjit/tools/gccjit-translate/: CMakeLists.txt  main.cpp
mlir-gccjit/www/: .gitignore  hugo.toml  link-docs.sh
mlir-gccjit/www/archetypes/: attrs.md  dialect.md  ops.md  passes.md  types.md
mlir-gccjit/www/content/: _index.md
mlir-gccjit/www/content/development/: _index.md  build.md  compatibility.md
